manifest/scg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scg
  namespace: user05
  labels:
    app: scg
spec:
  selector:
    matchLabels:
      app: scg
  replicas: 2
  template:
    metadata:
      name: scg
      labels:
        app: scg
    spec:
      serviceAccount: sa-user05
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: scg
          image: docker.io/hiondal/scg:2.0.0
          imagePullPolicy: Always
          ports:
            - name: container-port
              containerPort: 18080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 18080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: scg
  namespace: user05
spec:
  type: ClusterIP
  selector:
    app: scg
  ports:
    - name: scg
      port: 18080
      targetPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: scg-headless
  namespace: user05
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: scg
  ports:
    - name: scg
      port: 18080
      targetPort: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: user05.scg.msa.edutdc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scg
                port: 
                  number: 18080
